# latex-git-hooks

./: .gitignore  .pre-commit-config.yaml  .pre-commit-hooks.yaml  LICENSE  README.md  Taskfile.yml  Taskfile_latex.yml  pyproject.toml  pytest.ini  tox.ini
.github/: dependabot.yml
latexgithooks/: __init__.py  __main__.py  check_comma_ie_eg.py  check_latex_packages.py  check_single_command_per_line.py  ignore_auxiliary_files.py  run_linter_paperlinter.py  validate_filename.py  version.py
requirements/: requirements-dev.txt  requirements-prod.txt
scripts/: cmdInitiateEnv.bat  cmdStartEnvTF.bat
tests/: __init__.py  conftest.py  test_check_latex_packages.py  test_check_single_command_per_line.py  test_generic.py  test_ignore_auxiliary_files.py  test_pygrep_comma_in_eg_ie.py  test_pygrep_no_space_in_cite.py  test_run_linter_paperlinter.py  test_validate_filename.py
tests/data/: sample01_simple_correct.tex  sample02_packages_correct.tex  sample03_wrongname&.tex  sample03_wrongname&_wrong.tex  sample05_packages_correct.tex  sample06_packages_after_document_wrong.tex  sample06_packages_duplicates_wrong.tex  sample07_cite_wrong.tex  sample08_comma_ie_eg_correct.tex  sample09_comma_ie_eg_wrong.tex  sample10_command_per_file_correct.tex  sample11_command_per_file_wrong.tex
tests/taskfiles/: README.md  Taskfile_local.yml  Taskfile_remote.yml
