[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools", "setuptools-scm"]


[project]
name = "latexgithooks"
description = "pre-commit hook to validate LaTeX documents."
readme = "README.md"
keywords = ["LaTeX", "pre-commit"]
license = {file = "LICENSE"}
authors = [
  {name = "vdmitriyev"},
]
maintainers = [
  {name = "vdmitriyev"}
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Utilities"
]
dependencies = [
  "paperlinter@git+https://github.com/vdmitriyev/Paper-Linter"
]
version = "0.2.0"

scripts.lgh-validate-filename = "latexgithooks.validate_filename:main"
scripts.lgh-check-latex-packages = "latexgithooks.check_latex_packages:main"
scripts.lgh-ignore-auxiliary-files = "latexgithooks.ignore_auxiliary_files:main"
scripts.lgh-check-comma-ie-eg = "latexgithooks.check_comma_ie_eg:main"
scripts.lhg-check-single-command-per-line = "latexgithooks.check_single_command_per_line:main"
scripts.lhg-run-linter-paperlinter = "latexgithooks.run_linter_paperlinter:main"


[project.optional-dependencies]
dev = [
    "coverage",  # testing
    "mypy",  # linting
    "pytest",  # testing
    "ruff"  # linting
]


[project.urls]
Homepage = "https://github.com/vdmitriyev/latex-git-hooks"
Documentation = "https://github.com/vdmitriyev/latex-git-hooks"

[tool.setuptools.package-data]
"*" = ["*.*"]

[tool.setuptools.packages.find]
include = ["latexgithooks"]
exclude = ["scripts/*", "tests/*", "example/*", "docs/*", "build", "tools", "site"]


[tool.black]
line-length = 120
include = '\.pyi?$'
exclude = '''
/(
    \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | _build
  | buck-out
  | build
  | dist
)/
'''